add database, server and endpoint

--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "plex-employees",
   "version": "0.1.0",
+  "node version": "12.16.1",
   "license": "None provided",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "concurrently": "^3.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^1.17.5",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "sqlite3": "^4.1.1"
   },
   "scripts": {
     "start": "concurrently --kill-others \"node server\" \"npm run start:react-app\"",
