--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "express": "^4.17.1",
     "nodemon": "^1.17.5",
     "react": "^16.4.1",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "sqlite3": "^4.1.1"
+    "react-table": "^7.0.0-rc.16",
+    "sqlite3": "^4.1.1",
+    "styled-components": "^5.0.1"
   },
   "scripts": {
     "start": "concurrently --kill-others \"node server\" \"npm run start:react-app\"",
